Correciones a nivel front

--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,8 @@
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/assets/css/font-awesome.min.css",
               "src/assets/css/design.css",
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/intl-tel-input/build/css/intlTelInput.css"
             ],
             "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.min.js",
