--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "@angular/router": "^16.0.0",
     "@popperjs/core": "^2.11.7",
     "bootstrap": "^5.3.0-alpha3",
+    "google-libphonenumber": "^3.2.32",
+    "intl-tel-input": "^17.0.21",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.28",
+    "ngx-intl-tel-input": "^3.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -30,6 +33,7 @@
     "@angular-devkit/build-angular": "^16.0.0",
     "@angular/cli": "~16.0.0",
     "@angular/compiler-cli": "^16.0.0",
+    "@types/intl-tel-input": "^17.0.6",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
