--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,8 @@
               "src/assets/css/font-awesome.min.css",
               "src/assets/css/design.css",
               "src/styles.css",
-              "node_modules/intl-tel-input/build/css/intlTelInput.css"
+              "node_modules/intl-tel-input/build/css/intlTelInput.css",
+              "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
             ],
             "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.min.js",
