--- a/package.json
+++ b/package.json
@@ -28,11 +28,12 @@
     "jspdf-autotable": "^3.5.28",
     "ngx-intl-tel-input": "^3.2.0",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.4.8",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.0.0",
+    "@angular-devkit/build-angular": "^16.0.5",
     "@angular/cli": "~16.0.0",
     "@angular/compiler-cli": "^16.0.0",
     "@types/intl-tel-input": "^17.0.6",
