--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,8 @@
               "src/assets/css/design.css",
               "src/styles.css",
               "node_modules/intl-tel-input/build/css/intlTelInput.css",
-              "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
+              "node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "node_modules/sweetalert2/src/sweetalert2.scss"
             ],
             "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.min.js",
