--- a/package.json
+++ b/package.json
@@ -26,24 +26,24 @@
     "intl-tel-input": "^17.0.21",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.28",
-    "ngx-intl-tel-input": "^3.2.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.4.8",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.0.5",
-    "@angular/cli": "~16.0.0",
-    "@angular/compiler-cli": "^16.0.0",
+    "@angular-devkit/build-angular": "^0.802.2",
+    "@angular/cli": "^16.1.3",
+    "@angular/compiler-cli": "^10.2.5",
     "@types/intl-tel-input": "^17.0.6",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
+    "karma-coverage": "^1.1.2",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "ngx-intl-tel-input": "^3.2.0",
     "typescript": "~5.0.2"
   }
 }
