--- a/package.json
+++ b/package.json
@@ -10,29 +10,31 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.0.0",
+    "@angular/animations": "^16.1.3",
     "@angular/cdk": "^16.0.1",
-    "@angular/common": "^16.0.0",
-    "@angular/compiler": "^16.0.0",
-    "@angular/core": "^16.0.0",
-    "@angular/forms": "^16.0.0",
+    "@angular/common": "^16.1.3",
+    "@angular/compiler": "^16.1.3",
+    "@angular/core": "^16.1.3",
+    "@angular/forms": "^16.1.3",
     "@angular/material": "^16.0.1",
-    "@angular/platform-browser": "^16.0.0",
-    "@angular/platform-browser-dynamic": "^16.0.0",
-    "@angular/router": "^16.0.0",
+    "@angular/platform-browser": "^16.1.3",
+    "@angular/platform-browser-dynamic": "^16.1.3",
+    "@angular/router": "^16.1.3",
+    "@jridgewell/sourcemap-codec": "^1.4.15",
     "@popperjs/core": "^2.11.7",
     "bootstrap": "^5.3.0-alpha3",
     "google-libphonenumber": "^3.2.32",
     "intl-tel-input": "^17.0.21",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.28",
+    "nyc": "^15.1.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.4.8",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.802.2",
+    "@angular-devkit/build-angular": "^16.1.3",
     "@angular/cli": "^16.1.3",
     "@angular/compiler-cli": "^10.2.5",
     "@types/intl-tel-input": "^17.0.6",
